--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="index.css">
+        <title>Random Password Generator</title>
     </head>
     <body>
         <div class ="container">
